  ADDED: Support for related fields - ForeignKey, ManyToManyField and
         OneToOneField.
         (resolves issue 15)

  FIXED: TranslationField pre_save does not get the default language
         correctly.
         (thanks to jaap, resolves issue 31)

v0.2
====
Date: 2010-06-15
Packaged from revision 57.

  ADDED: Support for admin prepopulated_fields.
         (resolves issue 21)
  ADDED: Support for admin list_editable.
         (thanks carl.j.meyer, resolves issue 20)
  ADDED: Preserve the formfield widget of the translated field.
         (thanks piquadrat)
  ADDED: Initial support for django-south.
         (thanks andrewgodwin, resolves issue 11)
  ADDED: Support for admin inlines, common and generic.
         (resolves issue 12 and issue 18)

  FIXED: Admin form validation errors with empty translated values and
         unique=True.
         (thanks to adamsc, resolves issue 26)
  FIXED: Mangling of untranslated prepopulated fields.
         (thanks to carl.j.meyer, resolves issue 25)
  FIXED: Verbose names of translated fields are not translated.
         (thanks to carl.j.meyer, resolves issue 24)
  FIXED: Race condition between model import and translation registration in
         production by ensuring that models are registered for translation
         before TranslationAdmin runs.
         (thanks to carl.j.meyer, resolves issue 19)
  FIXED: Added workaround for swallowed ImportErrors by printing a traceback
         explicitly.
         (resolves issue 17)
  FIXED: Only print debug statements to stdout if the runserver or
         runserver_plus management commands are used.
         (resolves issue 16)
  FIXED: Removed print statements so that modeltranslation is usable with
         mod_wsgi.
         (resolves issue 7)
  FIXED: Broken admin fields and fieldsets.
         (thanks simoncelen, resolves issue 9)
  FIXED: Creation of db fields with invalid python language code.
         (resolves issue 4)
  FIXED: Tests to run from any project.